app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - name: j-svc-port
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: jenkins-slave
    protocol: TCP
    port: 50000
    targetPort: jenkins-slave
  type: ClusterIP
