deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ayanchuk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  namespace: ayanchuk
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: hello-app
        image: nexus-dock.k8s.playpit.by:80/helloworld-shanchar:$BUILD_NUMBER
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1        
      imagePullSecrets:
      - name: docker-secret   
---
apiVersion: v1
kind: Service
metadata:
  name: application-svc
  namespace: ayanchuk
  labels:
    app: application
spec:
  ports:
  - name: application-svc
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: application
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: application-ingress
  namespace: ayanchuk
  annotations:
    nginx.org/rewrites: serviceName=application-svc rewrite=/helloworld-ws/
spec:
  rules:
  - host: ayanchuk-app.k8s.playpit.by
    http:
      paths: 
      - path: /
        backend:
          serviceName: application-svc
          servicePort: application-svc
