deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: amiasnikovich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: amiasnikovich
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: nexus-dock.k8s.playpit.by:80/helloworld-amiasnikovich
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /helloworld-ws/
            port: 8080
            httpHeaders:
            - name: Server
              value: openresty/1.15.8.2
          initialDelaySeconds: 24
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
      imagePullSecrets:
        - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: amiasnikovich
  name: tomcat-svc
  labels:
    app: tomcat
spec:
  selector:
    app: tomcat
  ports:
  - port: 80
    targetPort: 8080
    name: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: amiasnikovich
  name: tomcat-ingress
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: miasnikovich.k8s.playpit.by
    http:
      paths:      
      - path: /
        backend:
          serviceName: tomcat-svc
servicePort: 80
