my_image_deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ashkraba
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: ashkraba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: 
          image: nexus-dock.k8s.playpit.by:80/helloworld-ashkraba
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: docker-secret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: ashkraba
  labels:
    app: tomcat
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: tomcat
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ashkraba-ingress
  namespace: shanchar
  annotations:
    nginx.org/rewrites: serviceName=tomcat rewrite=/helloworld-ws/
spec:
  rules:
  - host: ashkraba-app.k8s.playpit.by    
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 80
