tomcat.yml
apiVersion: v1
kind: Namespace
metadata:
  name: phardzeyeu

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: phardzeyeu
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
        maxUnavailable: 25%
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: nexus-dock.k8s.playpit.by:80/helloworld-phardzeyeu:BUILD_NUMBER
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /helloworld-ws
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
      imagePullSecrets:
      - name: docker-secret

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: phardzeyeu
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: phardzeyeu
  annotations:
    nginx.org/rewrites: serviceName=tomcat-service rewrite=/helloworld-ws/
spec:
  rules:
  - host: phardzeyeu-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-service
          servicePort: 80
