yaml.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shanchar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shanchar-deploy
  namespace: shanchar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shanchar-deploy
  template:
    metadata:
      labels:
        app: shanchar-deploy
    spec:
      containers:
        - name: shanchar-deploy
          image: nexus-dock.k8s.playpit.by:80/helloworld-shanchar
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: docker-secret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
---
apiVersion: v1
kind: Service
metadata:
  name: shanchar-svc
  namespace: shanchar
  labels:
    app: shanchar-deploy
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: shanchar-deploy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shanchar-ingress
  namespace: shanchar
  annotations:
    nginx.org/rewrites: serviceName=shanchar-svc rewrite=/helloworld-ws/
spec:
  rules:
  - host: shanchar-app.k8s.playpit.by    
    http:
      paths:
      - path: /
        backend:
          serviceName: shanchar-svc
          servicePort: 80
